--- a/BlazorWallAreaCalculator/BlazorWallAreaCalculator.csproj
+++ b/BlazorWallAreaCalculator/BlazorWallAreaCalculator.csproj
@@ -29,4 +29,8 @@
     <PackageReference Include="System.Data.SQLite.Core" Version="1.0.118" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\media\" />
+  </ItemGroup>
+
 </Project>
