Part 8 Deductions Grid  Take 2

--- a/.gitignore
+++ b/.gitignore
@@ -370,3 +370,4 @@ wwwroot/appsettings.Development.json
 appsettings.json
 appsettings.Development.json
 data/WallAreaCalc.db
+/BlazorWallAreaCalculator/Data/WallAreaCalc.db
